--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 /* Fonts settings */
 body, p, .navbar, .brand, a, .td-name, td, button, input, select, textarea {
-  font-family: "Roboto", "Helvetica", Arial, sans-serif; }
+  font-family: "Milky Nice"; }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6,
 .title, .card-title, .info-title, .footer-brand, .footer-big h5, .footer-big h4, .media .media-heading {
-  font-family: "Dosis", "Helvetica", Arial, sans-serif;
+  font-family: "Dosis", "Helvetica", Milky Nice, sans-serif;
   font-weight: 600; }
 
 /* Common Styles */
@@ -22,7 +22,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6,
   min-height: 600px; }
   .aa-header .navbar .navbar-brand {
     font-size: 24px;
-    font-family: "Dosis", "Helvetica", Arial, sans-serif;
+    font-family: "Milky Nice";
     font-weight: 600;
     box-shadow: none;
     letter-spacing: 1px;
