--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* Global Styles */
 body {
-    background-color: #f5f5f5;
-    font-family: 'Arial', sans-serif;
+    background-color: #222; /* Dark background color */
+    font-family: 'Milky Nice', Arial, sans-serif;
+    color: #fff; /* White text color on dark background */
     margin: 0;
     padding: 0;
 }
@@ -10,14 +11,14 @@ body {
     margin-top: 20px;
     margin-bottom: 40px;
     padding: 20px;
-    background-color: white;
+    background-color: #333; /* Slightly lighter background for the container */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
 
 /* Header */
 header {
-    background-color: #ff6b6b;
+    background-color: #56B2E0;
     color: white;
     padding: 20px;
     text-align: center;
@@ -29,7 +30,7 @@ section {
 }
 
 h2 {
-    color: #ff6b6b;
+    color: #E085E5;
     margin-bottom: 20px;
 }
 
@@ -38,12 +39,11 @@ h3 {
 }
 
 p {
-    color: #666;
     line-height: 1.5;
 }
 
 a {
-    color: #007bff;
+    color: #56B2E0;
     text-decoration: none;
 }
 
@@ -57,7 +57,7 @@ a {
 }
 
 .skills-list li {
-    background-color: #ff6b6b;
+    background-color: #E085E5;
     color: white;
     padding: 5px 10px;
     border-radius: 20px;
@@ -65,8 +65,8 @@ a {
 
 /* Projects */
 .project {
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: #444; /* Darker background for projects */
+    border: 1px solid #555;
     border-radius: 5px;
     padding: 20px;
     transition: transform 0.3s ease;
@@ -78,12 +78,12 @@ a {
 
 /* Highlight text */
 .highlight {
-    color: #ff6b6b;
+    color: #E085E5;
 }
 
 /* Footer */
 footer {
-    background-color: #ff6b6b;
+    background-color: #333;
     color: white;
     padding: 10px;
     text-align: center;
