--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     background-color: #222; /* Dark background color */
     font-family: 'Milky Nice', Arial, sans-serif;
-    color: #fff; /* White text color on dark background */
+    color: #ffef00; * White text color on dark background */
     margin: 0;
     padding: 0;
 }
